# gonali

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  plan.md
.claude/: settings.json
.github/workflows/: app-ci.yml  server-ci.yml
unii-app/: README.md  analysis_options.yaml  pubspec.yaml
unii-app/lib/: main.dart
unii-app/test/: auth_controller_test.dart  chat_list_controller_test.dart  discover_controller_test.dart  location_service_test.dart  profile_controller_test.dart  team_controller_test.dart
unii-server/: .dockerignore  Cargo.toml  Dockerfile  rustfmt.toml
unii-server/migrations/: 0001_init.sql  0002_teams_activities.sql  0003_user_locations.sql  0004_posts_media.sql  0005_moments_chat.sql
unii-server/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
unii-server/src/dto/: activity.rs  auth.rs  chat.rs  common.rs  location.rs  media.rs  mod.rs  moment.rs  post.rs  team.rs  user.rs
unii-server/src/middleware/: auth.rs
unii-server/src/model/: activity.rs  chat.rs  mod.rs  moment.rs  post.rs  team.rs  user.rs
unii-server/src/routes/: activities.rs  auth.rs  chats.rs  health.rs  locations.rs  media.rs  mod.rs  moments.rs  posts.rs  teams.rs  users.rs
unii-server/src/service/: activity_repo.rs  chat_repo.rs  location_repo.rs  media_repo.rs  mod.rs  moment_repo.rs  post_repo.rs  team_repo.rs  user_repo.rs
unii-server/src/util/: coord.rs  invite_code.rs  jwt.rs  mod.rs  password.rs
unii-server/tests/: activities.rs  auth.rs  chat.rs  heartbeat.rs  locations.rs  moments.rs  posts.rs  profile.rs  teams.rs
(+86 files in other folders)
