[package]
name = "unii-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[lib]
path = "src/lib.rs"

[[bin]]
name = "unii-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "tracing", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "limit"] }
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "chrono",
    "migrate",
    "uuid",
] }

# Auth / crypto
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"

# Error / config / time
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"
urlencoding = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
